hw1/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-hw1
  namespace: otus-hw1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: otus-hw1
