hw1/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw1
  namespace: otus-hw1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: service-hw1
                port:
                  number: 80
            pathType: Prefix
            path: /(.*)
          - backend:
              service:
                name: service-hw1
                port:
                  number: 80
            pathType: Prefix
            path: /otusapp/[a-zA-Z]*/(.*)
